fixed some loose ends
* fixed home page admin view bug
* added all loose ended "url" after completion tasks, such as "join club, become an admin, etc"
* also added a precursored logic before becoming an "admin"

--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -23,7 +23,7 @@
                         <span class="d-posted">Some Day</span>
                     <% } %>
                 </div>
-                <% if(msg.isAdmin && loggedIn) { %>
+                <% if(isAdmin && loggedIn) { %>
                     <form action="" method="post">
                         <input type="text" name="delete" value=<%= msg.delete %>  hidden>
                         <!-- <input type="text" name="delete" value="delt"  hidden> -->
