fully functioning members only app attempt
* added styles
* included required html markup for ui
* home page view is now revamped
* navs, forms, buttons are too revamped

--- a/views/is-admin.ejs
+++ b/views/is-admin.ejs
@@ -6,6 +6,13 @@
         <div class="container">
             <%- include("./partials/navs.ejs") %>
             <%- include("./partials/errors.ejs") %>
+            <hr>
+            <h1>ATTENTION</h1>
+            <h2>You need to be a club member before becoming an Admin</h2>
+            <h2>Otherwise you'll be redirected to "Join Club" page</h2>
+            <h2>After becoming a club memeber, consider coming back and try being an Admin again</h2>
+            <p>End of message transmission</p>
+            <hr>
                 <form action="" method="post">
                     <legend>Enter secret code to be eligible for Admin
                         <fieldset>
