--- a/views/login-form.ejs
+++ b/views/login-form.ejs
@@ -2,19 +2,21 @@
 <html lang="en">
     <%- include("./partials/head.ejs") %>
 <body>
-    <%- include("./partials/navs.ejs") %>
-    <h1><%= title %></h1>
-    <%- include("./partials/errors.ejs") %>
-    <form action="" method="post">
-        <fieldset>
-            <label for="username">Email Address: </label>
-            <input type="email" name="username" id="username" autocomplete="username" placeholder="username">
-        </fieldset>
-        <fieldset>
-            <label for="password">Password: </label>
-            <input type="password" id="password" name="password" autocomplete="current-password" placeholder="password">
-        </fieldset>
-        <button type="submit">Login</button>
-    </form>
+    <div class="container">
+        <%- include("./partials/navs.ejs") %>
+        <h1><%= title %></h1>
+        <%- include("./partials/errors.ejs") %>
+        <form action="" method="post">
+            <fieldset>
+                <label for="username">Email Address: </label>
+                <input type="email" name="username" id="username" autocomplete="username" placeholder="username">
+            </fieldset>
+            <fieldset>
+                <label for="password">Password: </label>
+                <input type="password" id="password" name="password" autocomplete="current-password" placeholder="password">
+            </fieldset>
+            <button type="submit">Login</button>
+        </form>
+    </div>
 </body>
 </html>
