--- a/views/partials/navs.ejs
+++ b/views/partials/navs.ejs
@@ -2,8 +2,8 @@
     <a href="/">Home</a>
     <a href="/join-club">Join Club</a>
     <a href="/is-admin">Become Admin</a>
+    <a href="/message-board">Message Board</a>
     <a href="/register">Register</a>
-    <a href="/message-board">Create Message Board</a>
     <a href="/login">Login</a>
     <a href="/logout">Logout</a>
 </nav>
