comment functionlaity is implemented
* added and adjusted routes for this logic
* handled comment data, sanitized and validated
* used modular scripts approach for including methods from another file
* added comment form error handled
* error form successful announcement is also made
* used contual fragmenmt for comment data rendering

--- a/client-sides/public/styles.css
+++ b/client-sides/public/styles.css
@@ -103,3 +103,11 @@ nav {
     text-align: justify;
     font-size: 1.7rem;
 }
+
+.comments {
+    display: none;
+}
+
+.comments .show-comments {
+    display: block;
+}
