fixed some rendering glitches
* comment form rendering is now called from render method directly
* for each blogpost comment form and comments are shown if available

--- a/client-sides/public/styles.css
+++ b/client-sides/public/styles.css
@@ -104,10 +104,10 @@ nav {
     font-size: 1.7rem;
 }
 
-.comments {
+/* .comments {
     display: none;
 }
 
 .comments .show-comments {
     display: block;
-}
+} */
