--- a/client-sides/admin/src/App.css
+++ b/client-sides/admin/src/App.css
@@ -19,10 +19,17 @@ ul {
   --special-clr: #9DB17C;
 }
 
+body {
+  background-color: var(--bg-clr);
+}
+
 .App {
   text-align: center;
   padding: 20px 4px;
-  background-color: var(--bg-clr);
+}
+
+nav {
+  margin: 0 0 20px;
 }
 
 a.nav-item {
@@ -41,7 +48,9 @@ button[type="submit"] {
   font-size: xx-large;
   border-radius: 6px;
   margin: 11px 0;
-  background-color: darkgray;
+  background-color: var(--link-clr);
+  cursor: pointer;
+  color: var(--bg-clr);
 }
 
 .ul-container,
@@ -72,6 +81,8 @@ fieldset {
   margin: 6px 0;
   border-radius: 6px;
   text-align: justify;
+  display: flex;
+  flex-direction: column;
 }
 
 ul,
@@ -87,6 +98,7 @@ ul {
 .blog-post {
   text-align: justify;
   color: var(--text-clr);
+  background-color: var(--special-clr);
 }
 
 .blog-post .info-wrapper {
@@ -103,14 +115,29 @@ ul {
   padding: 2px 11px;
   font-size: larger;
   border: none;
-  background: var(--btn-clr);
+  background: var(--link-clr);
   border-radius: 6px;
+  color: var(--btn-clr);
+  font-weight: bold;
 }
 
 .bp-container,
 .form-wrapper,
-.abp-wrapper {
+.abp-wrapper,
+.ul-container,
+.regu-container {
   margin: 42px auto;
+}
+
+.bp-container,
+.bd-wrapper,
+.cu-wrapper,
+.form-wrapper,
+.ul-container,
+.regu-container {
+  background-color: var(--link-clr);
+  padding: 53px;
+  border-radius: 8px;
 }
 
 h2.post-title {
@@ -137,15 +164,83 @@ h2.post-title {
 }
 
 .abp-wrapper li.blog-post {
-  margin: 15px 0;
+  margin: 29px 0;
   outline: dotted .9px var(--special-clr);
-  padding: 0px 0px 0 4px;
+  padding: 0px 0px 11px 4px;
   border-radius: 6px;
 }
 
 .abp-wrapper li.blog-post p.post-body {
-  height: 40px;
+  line-height: 2em;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  font-size: x-large;
+}
+
+.cu-wrapper,
+.bd-wrapper {
+  width: 760px;
+  margin: auto;
+}
+
+a.nav-link {
+  padding: 4px 8px;
+  margin: 2px 11px;
+  background-color: var(--link-clr);
+  font-size: x-large;
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: bold;
+  color: var(--bg-clr);
+}
+
+.bd-wrapper,
+.cu-wrapper,
+.form-wrapper,
+.ul-container,
+.regu-container {
+  background-color: var(--special-clr);
+}
+
+.bd-wrapper .blog-post {
+  text-align: justify;
+    outline: dotted .4px var(--link-clr);
+    padding: 0px 13px 8px;
+    border-radius: 6px;
+    background-color: var(--bg-clr);
+}
+
+.comment-wrapper  {
+  text-align: justify;
+  padding: 11px;
+  border: dotted .8px var(--text-clr);
+  margin: 4px 8px 0 0;
+  border-radius: 8px;
+  width: 737px;
+}
+
+.comment-wrapper .item-div {
+  font-size: x-large;
+  line-height: 1.7em;
+}
+
+.comment-wrapper .btns {
+  margin: auto;
+}
+
+a.nav-link:first-child {
+  margin-left: 0;
+}
+
+.errors-list,
+.ul-container .error {
+  margin-bottom: 17px;
+}
+
+.errors-list::before,
+.ul-container .error {
+  content: "Errors List";
+  color: maroon;
+  font-size: x-large;
 }
