user profile and cover photo updates in place
* added a modal in user profile section to grab new cover photo url from user
* added a modal in user profile section to grab new profile picture url from user
* added a new route and controller to handle such requests
* data update is also true for app state as well
* added an in app profile data updater so that data updates satys in sync
* also did some style touch ups, changes and commented out codes clean up from earlier

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,13 +24,27 @@
   row-gap: 29px;
 } */
 
-p {padding: 0; margin: 0;}
+p {
+  padding: 0;
+  margin: 0;
+}
+
+.css-l086p4-MuiImageListItem-root .MuiImageListItem-img {
+  height: 341px !important;
+}
+
+.css-14q7c0c-MuiImageListItemBar-titleWrap {
+  -webkit-flex-grow: 0 !important;
+  flex-grow: 0 !important;
+}
 
 .MuiCardHeader-content.css-1qbkelo-MuiCardHeader-content {
   margin-left: 17px !important;
 }
 
-.css-1rplq84 {margin-bottom: 6px !important;}
+.css-1rplq84 {
+  margin-bottom: 6px !important;
+}
 
 .cards-wrapper {
   width: 92vw;
